Update po files using updateallpo-multiOS.sh

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -1991,8 +1991,9 @@ msgstr "وضع الإعداد %s"
 msgid "Configuration..."
 msgstr "الإعداد..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "جاري الإعداد"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3345,6 +3346,10 @@ msgstr "إنجليزي"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 msgid "Enigma version: "
 msgstr "إصدار الانيجما: "
@@ -4628,10 +4633,6 @@ msgstr "تم إختياردليل غير صالح %s"
 
 #, fuzzy
 msgid "Invalid location"
-msgstr "موقع غير صالح"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "موقع غير صالح"
 
 msgid "Invalid transponder data"
@@ -7035,6 +7036,10 @@ msgstr "اعادة تشغيل انيجما"
 msgid "Restart enigma in debug mode"
 msgstr "اعادة تشغيل انيجما في وضع debug"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "اعادة تشغيل انيجما في وضع debug"
+
 msgid "Restart network"
 msgstr "إعادة تشغيل الشبكة"
 
@@ -7480,7 +7485,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
