--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -1860,8 +1860,9 @@ msgstr "Режим Конфигурация: %s"
 msgid "Configuration..."
 msgstr "Конфигурация..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Конфигуриране"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3163,6 +3164,10 @@ msgstr "Английски"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Енигма (ре)стартирания: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Енигма версия: "
 
@@ -4410,10 +4415,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Избрана грешна директория: %s"
 
 msgid "Invalid location"
-msgstr "Грешно Място"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Грешно Място"
 
 msgid "Invalid transponder data"
@@ -6614,6 +6615,10 @@ msgstr "Рестарт енигма"
 msgid "Restart enigma in debug mode"
 msgstr "Рестарт енигма в режим за отстраняване на грешки"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Рестарт енигма в режим за отстраняване на грешки"
+
 msgid "Restart network"
 msgstr "Рестарт мрежа"
 
@@ -7018,7 +7023,7 @@ msgstr "Изберете ‘A’ или ‘B’ ако вашата антенн
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Изберете ‘Unicable’ ако вашия приемник ще използва Unicable устройство. В противен случай изберете ‘FBC автоматично’."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
