--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -2118,7 +2118,8 @@ msgstr "Konfigurační mód:  %s"
 msgid "Configuration..."
 msgstr "Nastavení..."
 
-msgid "Configure DVB-ATSC"
+#, fuzzy
+msgid "Configure ATSC"
 msgstr "Konfigurovat DVB-ATSC"
 
 #
@@ -3611,6 +3612,10 @@ msgstr "Anglicky"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (re)startována: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigma verze: "
 
@@ -4993,10 +4998,6 @@ msgstr "Zvolen neplatný adresář: %s"
 #
 msgid "Invalid location"
 msgstr "Neplatné umístění"
-
-#
-msgid "Invalid reason"
-msgstr "Neplatný výsledek"
 
 #
 msgid "Invalid transponder data"
@@ -7576,6 +7577,11 @@ msgid "Restart enigma in debug mode"
 msgstr "Restart enigma v debug módu"
 
 #
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Restart enigma v debug módu"
+
+#
 msgid "Restart network"
 msgstr "Restartovat síť"
 
@@ -8040,7 +8046,8 @@ msgstr "Zvolte 'A' nebo 'B', pokud to Váš anténní systém vyžaduje, jinak z
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Jestliže tuner bude připojen k SRC zařízení (Unicable/JESS), nastavte 'FCB SRC'. Pro všechna ostatní nastavení zvolte 'FBC automatic'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+#, fuzzy
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr "Chcete-li konfigurovat tento tuner pro DVB-ATSC, zvolte 'Ano'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
