--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -2094,8 +2094,10 @@ msgstr "Konfigurations type %s"
 msgid "Configuration..."
 msgstr "Konfiguration..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfigurerer"
 
 #
 #, fuzzy
@@ -3571,6 +3573,10 @@ msgstr "Engelsk"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (gen)starter: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Enigma version: "
@@ -4944,11 +4950,6 @@ msgstr "Ugyldig mappe valgt: %s"
 
 #
 msgid "Invalid location"
-msgstr "Ugyldig placering"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ugyldig placering"
 
 msgid "Invalid transponder data"
@@ -7520,6 +7521,10 @@ msgstr "Genstart Enigma2"
 msgid "Restart enigma in debug mode"
 msgstr "Genstart Enigma2"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Genstart Enigma2"
+
 #
 msgid "Restart network"
 msgstr "Genstart netværk"
@@ -7987,7 +7992,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
