--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-10-22T21:44:30+02:00\n"
 "Last-Translator: daddelfalk <OpenPLi>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -1856,8 +1856,9 @@ msgstr "Konfigurationsmodus: %s"
 msgid "Configuration..."
 msgstr "Konfiguration…"
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfiguriere"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3149,6 +3150,10 @@ msgstr "Englisch"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Benutzeroberfläche (Enigma) startet neu: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigma-version:"
 
@@ -4376,10 +4381,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Ungültiges Verzeichnis ausgewählt: %s"
 
 msgid "Invalid location"
-msgstr "Fehlerhafter Ort"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Fehlerhafter Ort"
 
 msgid "Invalid transponder data"
@@ -6577,6 +6578,10 @@ msgstr "Benutzeroberfläche (Enigma) neu starten"
 msgid "Restart enigma in debug mode"
 msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
+
 msgid "Restart network"
 msgstr "Netzwerk neu starten"
 
@@ -6975,7 +6980,7 @@ msgstr "Wählen Sie “A” oder “B”, wenn Ihr Antennensystem dies erfordert
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Wählen Sie “FBC SCR”, wenn dieser Tuner ein Unicable/SCR-Gerät verwendet. Für alle anderen Setups wählen Sie “FBC automatisch”."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
