--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -1852,8 +1852,9 @@ msgstr "Τύπος ρύθμισης: %s"
 msgid "Configuration..."
 msgstr "Παραμετροποίηση..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Παραμετροποίηση"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3146,6 +3147,10 @@ msgstr "Αγγλικά"
 msgid "Enigma (re)starts: %d\n"
 msgstr "(Επαν)εκκινήσεις Enigma: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Έκδοση enigma: "
 
@@ -4373,10 +4378,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Επιλέχθηκε μη έγκυρος φάκελος: %s"
 
 msgid "Invalid location"
-msgstr "Μη έγκυρη τοποθεσία"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Μη έγκυρη τοποθεσία"
 
 msgid "Invalid transponder data"
@@ -6568,6 +6569,10 @@ msgstr "Επανεκκίνηση enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Επανεκκίνηση enigma σε αποσφαλμάτωση"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Επανεκκίνηση enigma σε αποσφαλμάτωση"
+
 msgid "Restart network"
 msgstr "Eπανεκκίνηση δικτύου"
 
@@ -6966,7 +6971,7 @@ msgstr "Επιλέξτε 'A' ή 'B' αν το απαιτεί το κεραιοσ
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Επιλέξτε 'FBC SCR' αν αυτό το tuner θα χρησιμοποιήσει μία συσκευή SCR (Unicable/JESS). Για όλες τις άλλες ρυθμίσεις επιλέξτε 'FBC αυτόματο'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
