--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -1866,8 +1866,9 @@ msgstr "Configuration mode: %s"
 msgid "Configuration..."
 msgstr "Configuration..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Configuring"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3180,6 +3181,10 @@ msgstr "English"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Kernel version: "
@@ -4409,10 +4414,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Invalid directory selected: %s"
 
 msgid "Invalid location"
-msgstr "Invalid location"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Invalid location"
 
 msgid "Invalid transponder data"
@@ -6639,6 +6640,10 @@ msgstr "Restart enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Restart enigma"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Restart enigma"
+
 msgid "Restart network"
 msgstr "Restart network"
 
@@ -7045,7 +7050,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
