--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-09-05 01:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -1858,8 +1858,9 @@ msgstr "Häälestamine: %s"
 msgid "Configuration..."
 msgstr "Seadistamine..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Seadistatakse"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3161,6 +3162,10 @@ msgstr "Inglise"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (taas)käivitamisi: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigma versioon: "
 
@@ -4388,10 +4393,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Valisid mittetöötava kausta: %s"
 
 msgid "Invalid location"
-msgstr "Kehtetu asukoht"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Kehtetu asukoht"
 
 msgid "Invalid transponder data"
@@ -6590,6 +6591,10 @@ msgstr "Taaskäivita enigma2"
 msgid "Restart enigma in debug mode"
 msgstr "Taaskäivita enigma2"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Taaskäivita enigma2"
+
 msgid "Restart network"
 msgstr "Taaskäivita võrk "
 
@@ -6991,7 +6996,7 @@ msgstr "Vali 'A' või 'B', kui antennisüsteem seda nõuab, muudel juhtudel vali
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Vali 'Unicable', kui see tuuner kasutab unicable seadet. Kõigil ülejäänud juhtudel vali 'FBC automaatne'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
