--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -1890,8 +1890,9 @@ msgstr "حالت پیکربندی: "
 msgid "Configuration..."
 msgstr "پیکربندی شبکه"
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "پیکربندی"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3225,6 +3226,10 @@ msgstr "انگلیسی"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "نسخه انیگما: "
 
@@ -4480,10 +4485,6 @@ msgstr "پوشه انتخاب شده نامعتبر است: %s"
 
 #, fuzzy
 msgid "Invalid location"
-msgstr "محل نامعتبر"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "محل نامعتبر"
 
 msgid "Invalid transponder data"
@@ -6760,6 +6761,10 @@ msgstr "راه اندازی مجدد انیگما"
 msgid "Restart enigma in debug mode"
 msgstr "راه اندازی مجدد انیگما"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "راه اندازی مجدد انیگما"
+
 msgid "Restart network"
 msgstr "راه اندازی دوباره شبکه"
 
@@ -7174,7 +7179,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
