--- a/po/fr.po
+++ b/po/fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2019-02-15 19:50+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
@@ -1856,8 +1856,9 @@ msgstr "Mode de configuration: %s"
 msgid "Configuration..."
 msgstr "Configuration..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Configuration"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3150,6 +3151,10 @@ msgstr "Anglais"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Redémarrage(s) Enigma: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Version Enigma: "
 
@@ -4375,10 +4380,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Répertoire sélectionné non valide: %s"
 
 msgid "Invalid location"
-msgstr "Emplacement non valide"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Emplacement non valide"
 
 msgid "Invalid transponder data"
@@ -6570,6 +6571,10 @@ msgstr "Redémarrer OpenPLi"
 msgid "Restart enigma in debug mode"
 msgstr "Redémarrer OpenPLi en mode déboggage"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Redémarrer OpenPLi en mode déboggage"
+
 msgid "Restart network"
 msgstr "Relancer le réseau"
 
@@ -6968,7 +6973,7 @@ msgstr "Sélectionnez ‘A’ ou ‘B’ si votre système aérien nécessite ce
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Sélectionnez ‘FBC SCR’ si le tuner va être connecté à un périphérique SCR (Unicable/JESS). Pour toutes les autres configurations choisir ‘FBC automatique’."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
