--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -2088,8 +2088,10 @@ msgstr "Ynstellingen modus"
 msgid "Configuration..."
 msgstr "Netwurk configuraasje"
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Oan it ynstellen"
 
 #
 #, fuzzy
@@ -3582,6 +3584,10 @@ msgstr "Engelsk"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Enigma version: "
@@ -4968,11 +4974,6 @@ msgstr "Unjildige map selektearre: %s"
 #
 #, fuzzy
 msgid "Invalid location"
-msgstr "Plak net tastien"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Plak net tastien"
 
 msgid "Invalid transponder data"
@@ -7583,6 +7584,9 @@ msgstr ""
 msgid "Restart enigma in debug mode"
 msgstr ""
 
+msgid "Restart enigma in standard mode"
+msgstr ""
+
 #
 msgid "Restart network"
 msgstr "Netwurk nij starte"
@@ -8059,7 +8063,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
