--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2019-02-18 17:28+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -1866,8 +1866,9 @@ msgstr "Način konfiguracije: %s"
 msgid "Configuration..."
 msgstr "konfiguracija..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfiguriranje"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3167,6 +3168,10 @@ msgstr "Engleski"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (rе)start: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Verzija enigme: "
 
@@ -4394,10 +4399,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Odabran je nevažeći direktorij: %s"
 
 msgid "Invalid location"
-msgstr "Nevažeća lokacija"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Nevažeća lokacija"
 
 msgid "Invalid transponder data"
@@ -6591,6 +6592,10 @@ msgstr "Restart enigma (Ponovno pokretanje enigme)"
 msgid "Restart enigma in debug mode"
 msgstr "Ponovno pokrenite enigmu u načinu za otklanjanje pogrešaka"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Ponovno pokrenite enigmu u načinu za otklanjanje pogrešaka"
+
 msgid "Restart network"
 msgstr "Ponovo pokrenite mrežu"
 
@@ -6992,7 +6997,7 @@ msgstr "Odaberite 'A' ili 'B' ako to zahtijeva antenski sustav, u suprotnom odab
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Odaberite 'FBC SCR' ako se ovaj tuner spaja na SCR (Unicable/JESS) uređaj. Za sve ostale postavke odaberite 'FBC automatic'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
