--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -1998,8 +1998,9 @@ msgstr "Stillinga hamur"
 msgid "Configuration..."
 msgstr "Stilling nettengingar..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Stilli"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3449,6 +3450,10 @@ msgstr "Enska"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Enigma version: "
@@ -4817,11 +4822,6 @@ msgstr "Ógild mappa valin: %s"
 #
 #, fuzzy
 msgid "Invalid location"
-msgstr "Ógildur staður"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ógildur staður"
 
 msgid "Invalid transponder data"
@@ -7425,6 +7425,9 @@ msgstr ""
 msgid "Restart enigma in debug mode"
 msgstr ""
 
+msgid "Restart enigma in standard mode"
+msgstr ""
+
 #
 msgid "Restart network"
 msgstr "Endurræsi netkort"
@@ -7893,7 +7896,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
