--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -1865,8 +1865,9 @@ msgstr "Modalità configurazione: %s"
 msgid "Configuration..."
 msgstr "Impostazioni..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Impostazione in corso..."
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3167,6 +3168,10 @@ msgstr "Inglese"
 msgid "Enigma (re)starts: %d\n"
 msgstr "(Ri)avvii di Enigma: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Versione Enigma: "
 
@@ -4400,10 +4405,6 @@ msgid "Invalid directory selected: %s"
 msgstr "La cartella selezionata non è valida: %s"
 
 msgid "Invalid location"
-msgstr "Posizione non valida"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Posizione non valida"
 
 msgid "Invalid transponder data"
@@ -6607,6 +6608,10 @@ msgstr "Riavvio di Enigma2"
 msgid "Restart enigma in debug mode"
 msgstr "Riavvio di Enigma2"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Riavvio di Enigma2"
+
 msgid "Restart network"
 msgstr "Riavviare la rete"
 
@@ -7008,7 +7013,7 @@ msgstr "Selezionare \"A\" o \"B\" se l'impianto lo richiede, altrimenti selezion
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Selezionare \"Unicable\" se questo sintonizzatore utilizza un dispositivo Unicable. Per tutte le altre configurazioni selezionare \"FBC automatico\"."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
