--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -2037,8 +2037,10 @@ msgstr "Oppsettstype: %s"
 msgid "Configuration..."
 msgstr "Konfigurasjon..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Stiller inn"
 
 #
 #, fuzzy
@@ -3468,6 +3470,10 @@ msgstr "Engelsk"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Enigma version: "
@@ -4805,11 +4811,6 @@ msgstr "Ugyldig katalog valgt:%s"
 
 #
 msgid "Invalid location"
-msgstr "Ugyldig plassering"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ugyldig plassering"
 
 msgid "Invalid transponder data"
@@ -7279,6 +7280,10 @@ msgstr "Starte enigma2 på nytt"
 msgid "Restart enigma in debug mode"
 msgstr "Starte enigma2 på nytt"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Starte enigma2 på nytt"
+
 msgid "Restart network"
 msgstr "Starte nettverk på nytt"
 
@@ -7720,7 +7725,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
