--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -2091,8 +2091,10 @@ msgstr "Konfigurationsläge : %s"
 msgid "Configuration..."
 msgstr "Konfiguration..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfigurering"
 
 #
 #, fuzzy
@@ -3560,6 +3562,10 @@ msgstr "Engelska"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (om)start : %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Kernel Version : "
@@ -4927,11 +4933,6 @@ msgstr "Ogiltigt bibliotek valt : %s"
 
 #
 msgid "Invalid location"
-msgstr "Ogiltig sökväg"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ogiltig sökväg"
 
 msgid "Invalid transponder data"
@@ -7482,6 +7483,10 @@ msgstr "Starta om enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Starta om enigma"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Starta om enigma"
+
 #
 msgid "Restart network"
 msgstr "Startar om nätverk"
@@ -7948,7 +7953,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
