--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -1889,8 +1889,9 @@ msgstr "โหมดการตั้งค่า"
 msgid "Configuration..."
 msgstr "ตั้งค่าเครือข่าย..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "กำลังตั้งค่า"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3239,6 +3240,10 @@ msgstr "ภาษาอังกฤษ"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "เวอร์ชั่นใหม่:"
@@ -4498,10 +4503,6 @@ msgstr "โฟล์เดอร์นี้: %s ไม่ถูกต้อง"
 
 #, fuzzy
 msgid "Invalid location"
-msgstr "ปลายทางไม่ถูกต้อง"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "ปลายทางไม่ถูกต้อง"
 
 msgid "Invalid transponder data"
@@ -6798,6 +6799,9 @@ msgstr ""
 msgid "Restart enigma in debug mode"
 msgstr ""
 
+msgid "Restart enigma in standard mode"
+msgstr ""
+
 msgid "Restart network"
 msgstr "เริ่มการทำงานเครือข่ายใหม่"
 
@@ -7214,7 +7218,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
