--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -1867,8 +1867,9 @@ msgstr "Yapılandırma modu: %s"
 msgid "Configuration..."
 msgstr "Yapılandırma..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Ayarlanıyor"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3187,6 +3188,10 @@ msgstr "İngilizce"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma Başlama Sayısı: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Çekirdek sürümü:"
@@ -4427,10 +4432,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Seçilen klasör geçersiz: %s"
 
 msgid "Invalid location"
-msgstr "Geçersiz konum"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Geçersiz konum"
 
 msgid "Invalid transponder data"
@@ -6662,6 +6663,10 @@ msgstr "Enigma'yı yeniden başlat"
 msgid "Restart enigma in debug mode"
 msgstr "Enigma'yı yeniden başlat"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Enigma'yı yeniden başlat"
+
 msgid "Restart network"
 msgstr "Ağı yeniden başlat"
 
@@ -7065,7 +7070,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
