--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -1891,8 +1891,9 @@ msgstr "Режим конфігурації: %s"
 msgid "Configuration..."
 msgstr "Конфігурація..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Налаштування"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3216,6 +3217,10 @@ msgstr "Англійський"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Енігма перезавантажується: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Версія ядра: "
@@ -4462,10 +4467,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Вибрано неправильний каталог: %s"
 
 msgid "Invalid location"
-msgstr "Неправильне розташування"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Неправильне розташування"
 
 msgid "Invalid transponder data"
@@ -6709,6 +6710,10 @@ msgstr "Рестарт E2"
 msgid "Restart enigma in debug mode"
 msgstr "Рестарт E2"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Рестарт E2"
+
 msgid "Restart network"
 msgstr "Перезапустити мережу"
 
@@ -7121,7 +7126,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
