--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-05 01:50+0330\n"
 "PO-Revision-Date: 2016-06-17 12:13+0800\n"
 "Last-Translator: nx111 <gdzdz@163.com>\n"
 "Language-Team: NEWBOLT\n"
@@ -1840,8 +1840,9 @@ msgstr ""
 msgid "Configuration..."
 msgstr "设置..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "配置"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3146,6 +3147,10 @@ msgstr "英语"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "反向:"
@@ -4368,9 +4373,6 @@ msgid "Invalid directory selected: %s"
 msgstr "选择了无效目录: %s"
 
 msgid "Invalid location"
-msgstr ""
-
-msgid "Invalid reason"
 msgstr ""
 
 msgid "Invalid transponder data"
@@ -6592,6 +6594,10 @@ msgstr "重启Enigma2"
 msgid "Restart enigma in debug mode"
 msgstr "重启Enigma2"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "重启Enigma2"
+
 msgid "Restart network"
 msgstr "重启网络"
 
@@ -6996,7 +7002,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
